--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: var(--fonte1);
 }
 
 :root {
@@ -17,12 +18,9 @@
 html {
     display: flex;
     justify-content: center;
-}
-
-main {
+    background-color: var(--cor1);
     width: 100vw;
     height: 100%;
-    background-color: var(--cor1);
 }
 
 #icon1 {
@@ -31,7 +29,7 @@ main {
 
 h2 {
     display: flex;
-    padding-left: 10px;
+    padding-left:40px;
     padding-top: 3vh;
     align-items: center;
     color: white;
@@ -40,7 +38,7 @@ h2 {
 }
 
 #screen {
-    padding-left: 10px;
+    padding-left: 40px;
     padding-top: 60px;
     width: 350px;
 }
@@ -91,6 +89,11 @@ h1 {
     font-family: var(--fonte1);
 }
 
+#sec1 a:hover {
+    background-color: var(--cor2);
+    color: white;
+}
+
 #icons {
     padding-bottom: 50px;
     display: flex;
@@ -101,4 +104,71 @@ h1 {
     width: 40px;
     height: 40px;
     padding: 5px;
+}
+
+.icon:hover {
+    background-color: var(--cor2);
+}
+
+@media (min-width: 1440px) {
+
+    html {
+        background-image: url(images/bg-desktop.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100vh;
+    }
+
+    main {
+        display: flex;
+        flex-direction: row;
+    }
+
+    body {
+        height: 100vh;
+    }
+    
+    h2 {
+        padding-left: 80px;
+        font-size: 35px;
+    }
+
+    #area1 {
+        height: 200px;
+        background-image: none;
+    }
+
+    #screen {
+        width: 800px;
+        padding-left: 80px;
+    }
+
+    #sec1 {
+        padding-top: 180px;
+        padding-left: 50px;
+    }
+
+    h1 {
+        width: 450px;
+        font-size: 40px;
+        text-align: left;
+        margin-left: 0px;
+    }
+
+    p {
+        width: 560px;
+        text-align: left;
+    }
+
+    #sec1 a {
+        display: inline-block;
+    }
+
+    #icons {
+        display: flex;
+        padding-top: 190px;
+        justify-content: right;
+        padding-right: 40px;
+    }
 }
