--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ html {
     background-color: var(--cor1);
     width: 100vw;
     height: 100%;
+    background-image: url(images/bg-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 #icon1 {
@@ -40,13 +43,11 @@ h2 {
 #screen {
     padding-left: 40px;
     padding-top: 40px;
-    width: 350px;
+    width: 300px;
 }
 
 #area1 {
-    background-image: url(images/bg-mobile.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    
 }
 
 section {
@@ -68,7 +69,7 @@ h1 {
     color: white;
     text-align: center;
     margin: auto;
-    font-size: 30px;
+    font-size: 26px;
     font-family: var(--fonte1);
     width: 350px;
 }
