--- a/style.css
+++ b/style.css
@@ -26,8 +26,14 @@ html {
     background-size: contain;
 }
 
+#area1 {
+    padding-left: 20px;
+}
+
 #icon1 {
     width: 40px;
+    position: relative;
+    right: 40px;
 }
 
 h2 {
@@ -41,13 +47,8 @@ h2 {
 }
 
 #screen {
-    padding-left: 40px;
     padding-top: 40px;
     width: 300px;
-}
-
-#area1 {
-    
 }
 
 section {
